# Neurocli

./: README.md  install_termux.sh  main.py  requirements.txt  setup.py
.github/workflows/: build.yml  main.yml
app/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/res/values/: strings.xml
neurocli/: __init__.py  app.py  config.py
providers/: __init__.py  llm.py
tools/: __init__.py  files.py  git.py  search.py
ui/: __init__.py  theme.py
vector/: __init__.py  index.py
